# rnd-chat-with-doc

./: .env  .gitignore  README.md  pyproject.toml
docs/: .webui_secret_key  open-webui.db
elk/: README.md  start-elk-stack.bat
notebooks/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  loader.ipynb  math.ipynb  pipeline.ipynb  pipeline2.ipynb  rnd_list.ipynb  screaper.ipynb
rnd_chat_with_doc/: agent_test.py  loader_test.py  multimodel.py  nim_test.py  nim_test2.py  query_test.py  query_ui_test.py
rnd_chat_with_doc/data/cache/: pipeline_cache.json
rnd_chat_with_doc/data/ingestion_storage/: ai.text
rnd_chat_with_doc/data/json/: out.json
rnd_chat_with_doc/data/large/: python-basics.txt
rnd_chat_with_doc/data/session_data/: user_session_state.yaml
rnd_chat_with_doc/modules/chat/: chat_with_document.py  elastic_demo.py  load_index.py  test_elastic.py  test_embedding.py  test_retreivers.py
rnd_chat_with_doc/modules/config/: global_settings.py
rnd_chat_with_doc/modules/manage/: document_uploader.py  vector_storage_context_manager.py
rnd_chat_with_doc/modules/pipelines/: transform_pipeline.py
rnd_chat_with_doc/modules/post_proessors/: score_filter_processor.py
rnd_chat_with_doc/modules/tools/: cc_doc_tool.py
rnd_chat_with_doc/modules/user/: session_manager.py
rnd_chat_with_doc/modules/util/: cache_manager.py  file_utils.py  formatters.py  llama_index_utils.py  llm_manager.py  logging_manager.py  regex_util.py  regex_util_test.py
rnd_chat_with_doc/server/: index.py
store/: ingestion_cache.json
(+1 files in other folders)
